# ssb-patchql

./: .env  .env_example  .gitattributes  .gitignore  .graphqlconfig  .travis.yml  Cargo.toml  README.md  appveyor.yml  public  schema.graphql  schema.json
.github/: FUNDING.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
core/: Cargo.toml  appveyor.yml  schema.graphql  testing_thoughts.md
core/migrations/2018-11-25-022440_create_messages/: up.sql
core/migrations/2019-03-02-051658_create_authors/: down.sql  up.sql
core/migrations/2019-03-02-051830_create_blob_links/: up.sql
core/migrations/2019-03-02-051836_create_blobs/: down.sql
core/migrations/2019-03-02-051846_create_branches/: down.sql
core/migrations/2019-03-02-051855_create_contacts/: up.sql
core/migrations/2019-03-02-051906_create_links/: down.sql  up.sql
core/migrations/2019-03-02-051924_create_votes/: down.sql  up.sql
core/migrations/2019-04-14-075043_create_texts_table/: up.sql
core/misc/: fifty_replies.offset  hello.json  out.offset  query_db_cursor.json  query_process_and_query.json
core/src/: lib.rs
core/src/db/: mod.rs  schema.rs
core/src/db/models/: abouts.rs  authors.rs  blob_links.rs  blobs.rs  branches.rs  contacts.rs  messages.rs  mod.rs  posts.rs  texts.rs  votes.rs
core/src/graphql/: db.rs  input_objects.rs  mention_connection.rs  mod.rs  notification.rs  post.rs  post_connection.rs  root.rs  thread.rs  thread_connection.rs
core/src/ssb_message/: mod.rs
core/src/utils/: mod.rs
core/tests/: threads.rs
http/: Cargo.toml  schema.json
migrations/2018-11-25-022440_create_messages/: down.sql  up.sql
migrations/2019-03-02-051654_create_abouts/: down.sql  up.sql
migrations/2019-03-02-051830_create_blob_links/: down.sql
migrations/2019-03-02-051836_create_blobs/: up.sql
migrations/2019-03-02-051846_create_branches/: up.sql
migrations/2019-03-02-051855_create_contacts/: down.sql
migrations/2019-03-02-051901_create_keys/: down.sql  up.sql
migrations/2019-03-02-051913_create_mentions/: down.sql  up.sql
migrations/2019-03-02-051924_create_votes/: up.sql
migrations/2019-04-14-075043_create_texts_table/: down.sql
misc/: out.offset  query_db_cursor.json
src/: author.rs  db.rs  feed.rs  lib.rs  like.rs  main.rs  post.rs  thread.rs
src/cursor/: mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/models/: abouts.rs  authors.rs  blob_links.rs  blobs.rs  branches.rs  contacts.rs  keys.rs  links.rs  mentions.rs  messages.rs  mod.rs  posts.rs  texts.rs  votes.rs
src/graphql/: author.rs  db.rs  feed.rs  input_objects.rs  like.rs  like_connection.rs  mod.rs  notification.rs  page_info.rs  post.rs  post_connection.rs  root.rs  thread.rs  thread_connection.rs
src/lib/: mod.rs
stdio/: Cargo.toml
stdio/example/: query_process_and_query.json
stdio/example/bash_example/: example.sh  query_process_and_query.json
