[package]
name = "ssb-patchql"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
diesel = { version = "1.4.1", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
env_logger = "0.6.1"
flumedb = { git = "https://github.com/sunrise-choir/flumedb-rs"}
hyper = "0.12"
itertools = "0.8.0"
juniper = "0.11.0"
juniper_codegen = "0.11.1"
juniper_warp = "0.2.0"
log = "0.4.6"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
private-box = "0.4.5"
warp = "0.1.8"
