[package]
name = "ssb-patchql"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
bytes = "0.4.12"
diesel = { version = "1.4.1", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
env_logger = "0.6.1"
flumedb = { git = "https://github.com/sunrise-choir/flumedb-rs"}
itertools = "0.8.0"
iron = "0.6.0"
iron-cors = "0.8.0"
juniper = "0.11.0"
juniper_codegen = "0.11.1"
juniper_iron = "0.3.0"
log = "0.4.6"
logger = "0.4"
mount = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
private-box = "0.4.5"
