[package]
name = "ssb-patchql-core"
version = "0.1.2"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[features]
default = []
ssb-go-log = []

[dependencies]
base64 = "0.10.0"
bytes = "0.4.12"
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
diesel = { version = "1.4.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
env_logger = "0.6.1"
flumedb = { git = "https://github.com/sunrise-choir/flumedb-rs", branch = "go_offset_log" }
#flumedb = { path = "../../flumedb-rs"}
itertools = "0.8.0"
juniper = "0.14.0"
juniper_codegen = "0.14.0"
log = "0.4.6"
ssb-causal-sort = {git="https://github.com/sunrise-choir/ssb-causal-sort"}
ssb-multiformats = {git="https://github.com/sunrise-choir/ssb-multiformats"}
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
private-box = "0.5.0"
#jsonrpc-stdio-server = {path="../jsonrpc/stdio"}
